ast/src/snapshots/transmute_ast__parser__tests__ret_missing_next_token.snap
---
source: ast/src/parser.rs
expression: "Parser :: new(Lexer :: new(\"ret\")).parse()"
---
Err(
    Diagnostics {
        diagnostics: [
            Diagnostic {
                message: "Unexpected `eof`, expected one of (11) identifier, number, string, `true`, `false`, `if`, `while`, `;`, `(`, `-`, `[`",
                span: 1:4; [3, 3],
                level: Error,
            },
        ],
    },
)
