ast/src/snapshots/transmute_ast__parser__tests__struct_instantiation_generic.snap
---
source: ast/src/parser.rs
expression: compilation_unit.into_ast()
---
Ok(
    Ast {
        identifiers: [
            IdentId(0) => "<root>",
            IdentId(1) => "S",
            IdentId(2) => "String",
            IdentId(3) => "s",
        ],
        identifier_refs: [
            IdentRefId(0) => IdentifierRef {
                id: IdentRefId(0),
                ident: Identifier {
                    id: IdentId(2),
                    span: 1:4; [3, 9],
                },
            },
            IdentRefId(1) => IdentifierRef {
                id: IdentRefId(1),
                ident: Identifier {
                    id: IdentId(3),
                    span: 1:14; [13, 14],
                },
            },
            IdentRefId(2) => IdentifierRef {
                id: IdentRefId(2),
                ident: Identifier {
                    id: IdentId(1),
                    span: 1:1; [0, 1],
                },
            },
        ],
        expressions: [
            ExprId(0) => Expression {
                id: ExprId(0),
                kind: Literal(
                    Literal {
                        kind: String(string),
                        span: 1:17; [16, 24],
                    },
                ),
                span: 1:17; [16, 24],
            },
            ExprId(1) => Expression {
                id: ExprId(1),
                kind: StructInstantiation(
                    IdentRefId(2),
                    [
                        TypeDefId(0),
                    ],
                    [
                        (
                            IdentRefId(1),
                            ExprId(0),
                        ),
                    ],
                ),
                span: 1:1; [0, 26],
            },
        ],
        statements: [
            StmtId(0) => Statement {
                id: StmtId(0),
                kind: Namespace(
                    Identifier {
                        id: IdentId(0),
                        span: 0:0; [0, 0],
                    },
                    InputId(0),
                    [
                        StmtId(1),
                    ],
                ),
                span: 0:0; [0, 0],
            },
            StmtId(1) => Statement {
                id: StmtId(1),
                kind: Expression(
                    ExprId(1),
                ),
                span: 1:1; [0, 27],
            },
        ],
        type_defs: [
            TypeDefId(0) => TypeDef {
                kind: Simple(
                    [
                        IdentRefId(0),
                    ],
                ),
                span: 1:4; [3, 9],
            },
        ],
        root: StmtId(0),
    },
)
