ast/src/snapshots/transmute_ast__parser__tests__struct_instantiation_two_fields_trailing_coma.snap
---
source: ast/src/parser.rs
expression: compilation_unit.into_ast()
---
Ok(
    Ast {
        identifiers: [
            IdentId(0) => "<root>",
            IdentId(1) => "S",
            IdentId(2) => "x",
            IdentId(3) => "y",
        ],
        identifier_refs: [
            IdentRefId(0) => IdentifierRef {
                id: IdentRefId(0),
                ident: Identifier {
                    id: IdentId(2),
                    span: 1:5; [4, 5],
                },
            },
            IdentRefId(1) => IdentifierRef {
                id: IdentRefId(1),
                ident: Identifier {
                    id: IdentId(3),
                    span: 1:11; [10, 11],
                },
            },
            IdentRefId(2) => IdentifierRef {
                id: IdentRefId(2),
                ident: Identifier {
                    id: IdentId(1),
                    span: 1:1; [0, 1],
                },
            },
        ],
        expressions: [
            ExprId(0) => Expression {
                id: ExprId(0),
                kind: Literal(
                    Literal {
                        kind: Number(1),
                        span: 1:8; [7, 8],
                    },
                ),
                span: 1:8; [7, 8],
            },
            ExprId(1) => Expression {
                id: ExprId(1),
                kind: Literal(
                    Literal {
                        kind: Number(2),
                        span: 1:14; [13, 14],
                    },
                ),
                span: 1:14; [13, 14],
            },
            ExprId(2) => Expression {
                id: ExprId(2),
                kind: StructInstantiation(
                    IdentRefId(2),
                    [
                        (
                            IdentRefId(0),
                            ExprId(0),
                        ),
                        (
                            IdentRefId(1),
                            ExprId(1),
                        ),
                    ],
                ),
                span: 1:1; [0, 17],
            },
        ],
        statements: [
            StmtId(0) => Statement {
                id: StmtId(0),
                kind: Namespace(
                    Identifier {
                        id: IdentId(0),
                        span: 0:0; [0, 0],
                    },
                    None,
                    InputId(0),
                    [
                        StmtId(1),
                    ],
                ),
                span: 0:0; [0, 0],
            },
            StmtId(1) => Statement {
                id: StmtId(1),
                kind: Expression(
                    ExprId(2),
                ),
                span: 1:1; [0, 18],
            },
        ],
        type_defs: [],
        roots: [
            StmtId(0),
        ],
    },
)
