ast/src/snapshots/transmute_ast__parser__tests__struct_valid_type_param.snap
---
source: ast/src/parser.rs
expression: compilation_unit.into_ast()
---
Ok(
    Ast {
        identifiers: [
            IdentId(0) => "<root>",
            IdentId(1) => "S",
            IdentId(2) => "T",
            IdentId(3) => "a",
        ],
        identifier_refs: [
            IdentRefId(0) => IdentifierRef {
                id: IdentRefId(0),
                ident: Identifier {
                    id: IdentId(2),
                    span: 1:18; [17, 18],
                },
            },
        ],
        expressions: [],
        statements: [
            StmtId(0) => Statement {
                id: StmtId(0),
                kind: Namespace(
                    Identifier {
                        id: IdentId(0),
                        span: 0:0; [0, 0],
                    },
                    InputId(0),
                    [
                        StmtId(1),
                    ],
                ),
                span: 0:0; [0, 0],
            },
            StmtId(1) => Statement {
                id: StmtId(1),
                kind: Struct(
                    Identifier {
                        id: IdentId(1),
                        span: 1:8; [7, 8],
                    },
                    [],
                    [
                        Identifier {
                            id: IdentId(2),
                            span: 1:10; [9, 10],
                        },
                    ],
                    [
                        Field {
                            identifier: Identifier {
                                id: IdentId(3),
                                span: 1:15; [14, 15],
                            },
                            type_def_id: TypeDefId(0),
                            span: 1:15; [14, 18],
                        },
                    ],
                ),
                span: 1:1; [0, 20],
            },
        ],
        type_defs: [
            TypeDefId(0) => TypeDef {
                kind: Simple(
                    [
                        IdentRefId(0),
                    ],
                ),
                span: 1:18; [17, 18],
            },
        ],
        root: StmtId(0),
    },
)
